fix: change BuildPrinciples background cutoff from 1024px to 768px

--- a/website/src/components/BuildPrinciples/BuildPrinciples.module.scss
+++ b/website/src/components/BuildPrinciples/BuildPrinciples.module.scss
@@ -33,7 +33,7 @@
     padding-bottom: 120px;
   }
 
-  @media (min-width: 1024px) {
+  @media (min-width: 768px) {
     background: none;
   }
 }
